--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 "dependencies": {
   "express": "^4.18.2",
   "body-parser": "^1.20.2",
-  "gpt-tokenizer": "^1.1.3"
+  "gpt--tokenizer": "^1.1.3"
 }
 
 }
