--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "start": "node index.js"
   },
-"dependencies": {
-  "express": "^4.18.2",
-  "body-parser": "^1.20.2",
-  "gpt--tokenizer": "^1.1.3"
-}
-
+  "dependencies": {
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "gpt-3-encoder": "^1.1.4"
+  }
 }
